<resources>
    <string name="app_name">DemoApp</string>
    <string name="name_app">Money For Meals Management</string>
    <string name="text_list_user">List User</string>
    <string name="text_logout">Log Out</string>
    <string name="text_history">History</string>
    <string name="text_username">Username:</string>
    <string name="text_password">Password:</string>
    <string name="text_sign_in_button">Sign In</string>
    <string name="text_sign_up_button">Sign Up</string>
    <string name="text_sign_up">Do you have not an account! Sign up now?</string>
    <string name="text_profile">Profile</string>
    <string name="text_id">ID:</string>
    <string name="text_name">Name:</string>
    <string name="text_delete_button">Delete User</string>
    <string name="text_edit_button">Edit</string>
    <string name="text_re_password">Re-Password:</string>
    <string name="text_sign_up_title">Sign Up</string>
    <string name="text_view_profile">View Profile</string>
    <string name="text_money_this_month">Money for meals this month:</string>
    <string name="text_vnd">VND</string>
    <string name="text_add">Add</string>
    <string name="text_add_money">Add Money</string>
    <string name="text_note">Note:</string>
    <string name="text_money">Money:</string>
    <string name="text_edit_money">Edit Money</string>
    <string name="text_edit_name">Edit Name</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_old_pass">Old Password:</string>
    <string name="text_new_pass">New Password:</string>
    <string name="text_re_new_pass">Re-New Password:</string>
    <string name="message_incorrect_user_pass">Incorrect Username or Password</string>
    <string name="title_alert">Alert</string>
    <string name="alert_enter_name">Please enter Name</string>
    <string name="alert_enter_username">Please enter Username</string>
    <string name="alert_enter_pass">Please enter Password</string>
    <string name="alert_enter_re_pass">Please enter Re-Password</string>
    <string name="alert_enter_exactly_pass">Please enter exactly Re-Password</string>
    <string name="alert_user_exist">Username has been exist</string>
    <string name="alert_success">Success</string>
    <string name="alert_enter_old_pass">Please enter Old Password</string>
    <string name="alert_enter_new_pass">Please enter New Password</string>
    <string name="alert_enter_exactly_old_pass">Please enter exactly Old Password</string>
    <string name="title_confirm">Confirm</string>
    <string name="text_delete_account">Do you want to delete account</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="format_date">dd/MM/yyyy HH:mm:ss</string>
    <string name="alert_enter_note">Please enter Note</string>
    <string name="alert_enter_money">Please enter Money</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_log_out">Do you want to log out</string>
    <string name="todo">TODO</string>
    <string name="text_delete_confirm">Do you want to delete</string>
    <string name="text_view_history">View History</string>
</resources>
