<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/unnamed"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".user_screen.UserScreen">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_text_welcome"
            android:text="@string/text_welcome"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/text_size_welcome"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/textWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/text_size_welcome"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <Button
            android:id="@+id/buttonLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_logout_button"
            android:background="@drawable/button_red"
            android:text="@string/text_logout"
            android:textColor="@color/colorBlack" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_text_view_profile"
        android:text="@string/text_view_profile"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_user_screen"
        tools:ignore="SpUsage" />

    <Button
        android:id="@+id/buttonProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_profile_button"
        android:background="@drawable/button"
        android:text="@string/text_profile" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_money_this_month"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_user_screen"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_text_money"
            android:text=""
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/text_size_user_screen"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_vnd"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/text_size_user_screen"
            tools:ignore="SpUsage" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button_add"
        android:background="@drawable/button"
        android:text="@string/text_add"
        tools:ignore="ButtonStyle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_text_view_profile"
        android:text="@string/text_view_history"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_user_screen"
        tools:ignore="SpUsage" />
    <Button
        android:id="@+id/buttonHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button_add"
        android:background="@drawable/button"
        android:text="@string/text_history" />


</LinearLayout>