<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:gravity="left"
    android:orientation="vertical"
    android:padding="@dimen/padding_dialog"
    tools:ignore="RtlHardcoded">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_change_password"
        android:textSize="@dimen/text_size_change_pass"
        android:textStyle="bold"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_change_pass"
            android:text="@string/text_old_pass"
            android:textSize="@dimen/text_size_pass"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/editOldPass"
            android:layout_width="@dimen/width_edit_text_dialog"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_old_pass"
            android:inputType="textPassword"
            android:autofillHints=""
            tools:ignore="LabelFor" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_change_pass"
            android:text="@string/text_new_pass"
            android:textSize="@dimen/text_size_pass"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/editNewPass"
            android:layout_width="@dimen/width_edit_text_dialog"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_new_pass"
            android:inputType="textPassword"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_change_pass"
            android:text="@string/text_re_new_pass"
            android:textSize="@dimen/text_size_pass"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/editRePass"
            android:layout_width="@dimen/width_edit_text_dialog"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonEditPassDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button"
        android:text="@string/text_edit_button" />
</LinearLayout>