<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/unnamed"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_horizontal_layout_sign_up"
    tools:context=".home_screen.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_text_sign_up"
        android:text="@string/text_sign_up_title"
        android:textColor="@color/colorGreen"
        android:textSize="@dimen/text_size_sign_up_title"
        android:textStyle="italic"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_layout_sign_up"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_sign_up_screen"
            android:text="@string/text_name"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/nameSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_edit_text_name"
            android:inputType="text"
            android:autofillHints=""
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_layout_sign_up"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_sign_up_screen"
            android:text="@string/text_username"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/usernameSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_edit_username"
            android:inputType="text"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_layout_sign_up"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_sign_up_screen"
            android:text="@string/text_password"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/passwordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_edit_password"
            android:inputType="textPassword"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_layout_sign_up"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_sign_up_screen"
            android:text="@string/text_re_password"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/re_passwordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </LinearLayout>

    <Button
        android:id="@+id/signUpScreenBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_sign_up_button_screen"
        android:background="@drawable/button"
        android:text="@string/text_sign_up_button" />


</LinearLayout>